# SurfplanAdapter

./: .buildinfo  .gitignore  CITATION.cff  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_dev.md  changelog.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  test_indexing.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yml  tests.yml
data/: default_kite_3d.txt
data/TUDELFT_V3_KITE/: config.yaml
data/TUDELFT_V3_LEI_KITE/: TUDELFT_V3_LEI_KITE_3d.txt
data/TUDELFT_V3_LEI_KITE/profiles/: V3D_AVL.avl
data/V3/: V3D_3d.txt
data/default_kite/: config.yaml  default_kite.txt  default_kite_3d.txt
data/default_kite/polar_data/: prof_8_polar.csv
data/default_kite/profiles/: default_kite_3d.avl
docs/: conf.py  find_airfoil_parameters.md  generate_yaml.md  index.rst  parameter_finding_framework.md  plotting.md  process_bridle_lines.md  process_wing.md
docs/processed_data/TUDELFT_V3_KITE/: aero_geometry.yaml  config_kite.yaml
docs/processed_data/V9_60J-Inertia/: config_kite.yaml
draft/: import_data.py  plotKite_corentin.py
examples/: main_run_VSM.py  rectangular_wing.py
examples/TUDELFT_V3_LEI_KITE/: main_run_VSM.py
examples/V3/: main_run_VSM.py
examples/default_kite/: main_run_VSM.py
processed_data/: geometry.csv
processed_data/TUDELFT_V3_KITE/: aero_geometry.yaml  bridle_lines.csv  config_kite.yaml  profile_parameters.csv  struc_geometry.yaml  struc_geometry_all_in_surfplan.yaml  struc_geometry_all_in_surfplan_merged_nodes.yaml  wing_geometry.csv  wing_geometry.yaml  wing_mass_distribution.yaml
processed_data/TUDELFT_V3_KITE/polar_data/: corrected_polar_12.csv  corrected_polar_13.csv  corrected_polar_14.csv  corrected_polar_16.csv  corrected_polar_17.csv  corrected_polar_19.csv  corrected_polar_20.csv  corrected_polar_21.csv  corrected_polar_22.csv  corrected_polar_23.csv  corrected_polar_3.csv
processed_data/TUDELFT_V3_KITE/profiles/: prof_1_lambda_metadata.json  profile_parameters.csv
processed_data/TUDELFT_V3_LEI_KITE/: bridle_lines.csv  geometry.csv  wing_geometry.csv
processed_data/default_kite/: config_kite.yaml  geometry.csv  struc_geometry.yaml  struc_geometry_all_in_surfplan.yaml
processed_data/default_kite/profiles/: prof_1_lambda_metadata.json
scripts/: calculate_cg_and_inertia.py  main_calculate_cg_and_inertia.py  main_run_VSM.py  plot_all_parametrically_defined_airfoils_in_yaml.py  process_surfplan_files.py  run_vsm.py
scripts/stale/: calculate_cg_and_inertia.py  merge_bridle_nodes_to_wing_nodes.py
src/SurfplanAdapter/: calculate_cg_and_inertia.py  generate_geometry_csv_files.py  generate_vsm_input.py  generate_wing_yaml.py  logging_config.py  main_generating_vsm_input.py  plotting.py  reading_airfoil_dat_files.py  reading_surfplan_txt.py  transforming_coordinate_system.py  utils.py
src/SurfplanAdapter/find_airfoil_parameters/: main_find_airfoil_parameters.py  plot_airfoils_comparison.py  utils_lei_parametric.py  utils_lei_parametric_copy.py
src/SurfplanAdapter/generate_yaml/: create_struc_geometry_yaml.py  main_generate_yaml.py  utils.py
src/SurfplanAdapter/process_bridle_lines/: generate_bridle_connections_data.py  generate_bridle_lines_data.py  generate_bridle_nodes_data.py  main_process_bridle_lines.py
src/SurfplanAdapter/process_surfplan/: generate_wing_yaml.py  main_process_surfplan.py  read_profile_from_airfoil_dat_files.py  transform_coordinate_system_surfplan_to_VSM.py  utils.py
src/SurfplanAdapter/process_wing/: generate_wing_airfoils_data.py  generate_wing_sections_data.py  main_process_wing.py
src/SurfplanAdapter/surfplan_to_vsm/: generate_vsm_input.py  read_profile_from_airfoil_dat_files.py  read_surfplan_txt.py  transform_coordinate_system_surfplan_to_VSM.py
tests/: conftest.py
